fix sort quests on mobile

--- a/views/pageQuests/questslist.styl
+++ b/views/pageQuests/questslist.styl
@@ -10,6 +10,29 @@ tr-time = .65s;
     width: 96%;
 }
 
+.load
+{
+    width: 100%;
+    text-align: center;
+}
+
+.container-fluid_shift
+{
+    transform: translateY(5px);
+    transition: transform .8s ease;
+}
+
+.load__img
+{
+    margin-bottom: 10px;
+    width: 40px;
+}
+
+.load_invisible
+{
+    display:none;
+}
+
 .description
 {
     text-overflow: ellipsis;
